# station-manager

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: ci.yml  deploy.yml
apps/accounts/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
apps/api/: admin.py  authentication.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/audit/: apps.py  urls.py  views.py
apps/builder/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/dashboard/: urls.py  views.py
apps/deployments/: admin.py  api_urls.py  api_views.py  apps.py  consumers.py  forms.py  models.py  routing.py  (+4 more)
config/: asgi.py  urls.py  wsgi.py
deploy/: docker-compose.prod.yml  nginx.conf
requirements/: base.txt  dev.txt  prod.txt
station_agent/: __init__.py  __main__.py  agent.py  bootloader.py  config.example.yml  config.py  health_check.py  heartbeat.py  http_client.py  inventory.py  ota.py  pyproject.toml  requirements.txt  signing.py  station-agent.service  terminal.py
templates/: base.html
tests/: conftest.py  test_accounts.py  test_agent_ota_flow.py  test_api.py  test_bootloader.py  test_deployments.py  test_ed25519_auth.py  test_firmware.py  test_heartbeat_inventory.py  test_images.py  test_images_extraction.py  test_monitoring.py  test_ota_install.py  test_provisioning.py  test_rollouts.py  test_stations_permissions.py  test_terminal_agent.py
(+156 files in other folders)
